# blender

./: .gitignore  .yamllint.yml  CLAUDE.md  Makefile  README.md  claude-settings.json  package-lock.json  package.json  pyproject.toml
.blender/: agents.md  blender.yml  fix-dependabot-prompt.md
.blender/plans/: 67.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-engineer.yml  automerge-dependabot.yml  build-setup.yml  chore-automerge-dependabot-prs.yml  chore-review-major-dependabot-update.yml  ci.yml  setup.yml  (+4 more)
config/: defaults.yml
docs/: CLAUDE.md  dashboard.js  index.html  music-player.js  playlist.js  style.css
prompts/: auto-engineer-implement-prompt.md  auto-engineer-plan-prompt.md  auto-engineer-self-review-prompt.md  fix-ci-prompt.md  instructions.md  investigate-alert-prompt.md  major-bump-prompt.md  setup-prompt.md
scripts/: alert_report.py  automerge-dependabot.py  automerge_dependabot.py  commit.sh  config_utils.py  extract_alert_verdict.py  extract_plan.py  fork-fix-pr.sh  gather-alert-context.sh  gather-context.sh  gather-implement-context.sh  gather-issue-context.sh  gather-review-context.sh  gather-self-review-context.sh  gather_context.py  git-commit-api.sh  github_utils.py  investigate-all-alerts.sh  load-agent-instructions.sh  load-config.py  npm-bump.sh  parse-pr-title.sh  pip-lock-bump.sh  post-major-review.sh  post_alert_action.py  post_major_review.py  pr-lib.sh  requirements.txt  run-claude.sh  sanitize.py  sanitize.sh  setup-prompt.md  setup.sh  sweep.py  trigger-workflows.py
tests/: test_version_in_range.py
(+12 files in other folders)
