[project]
name = "blender"
version = "0.1.0"
description = "BLEnder: automated Dependabot PR fixer and automerger"
requires-python = ">=3.11"
dependencies = [
    "PyGithub==2.9.0",
    "PyYAML==6.0.3",
    "packaging==26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
